--- a/style.css
+++ b/style.css
@@ -1,3 +1,33 @@
-#container img{
-    width: 100px;
+
+
+
+li {
+    list-style: none;
+}
+
+body {
+    font-family: 'Roboto Condensed', sans-serif;
+    background-color: black;
+    color: antiquewhite;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    padding: 2.5rem;
+    text-decoration: none;
+
+}
+
+img {
+    max-width: 100%;
+    max-height: 100%;
+   }
+
+.logo {
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    align-content: center;
+    padding: 2.5rem;
+    height: 250px;
+    width: 250px;
 }
