--- a/style.css
+++ b/style.css
@@ -1,13 +1,16 @@
 
 nav li {
-    display: inline-block;
-    margin: auto;
-    align-content: center;
-  
+    list-style: none;
+    display: inline;
+    
 }
 
 li {
     list-style: none;
+}
+
+input {
+    padding: 0.3rem;
 }
 
 body {
@@ -23,8 +26,8 @@ body {
 }
 
 img {
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 300px;
+    max-height: 300px;
    }
 
 .logo {
@@ -32,7 +35,13 @@ img {
     justify-content: center;
     margin: auto;
     align-content: center;
-    padding: 2.5rem;
-    height: 250px;
-    width: 250px;
+
+}
+
+
+#resultados {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    row-gap: 2rem;
+    gap: 1rem;
 }
